@@ -19,7 +19,7 @@ docker run \
     --volume "${PWD}/maven_cache":/root/.m2 \
     --workdir "${PWD}" \
     tools \
-        mvn --batch-mode versions:set -DnewVersion="$(<VERSION)" -Dmaven.test.skip
+        mvn --batch-mode versions:set -DnewVersion="$(<VERSION)" -Dmaven.test.skip -DargLine="--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
 # TODO: Update sample app dependency to use this version.
 
 # Use Tools image to package code
@@ -28,7 +28,7 @@ docker run \
     --volume "${PWD}/maven_cache":/root/.m2 \
     --workdir "${PWD}" \
     tools \
-        mvn --batch-mode -f pom.xml package -Dmaven.test.skip
+        mvn --batch-mode -f pom.xml package -Dmaven.test.skip -DargLine="--add-opens java.base/sun.nio.ch=ALL-UNNAMED --add-opens java.base/java.io=ALL-UNNAMED"
 
 echo "find jar file inside the agent nodes"
 
